Archive2/6b/1ca9768f75702c/output
main.cpp:3:20: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
    return a || !b && c;
             ~~ ~~~^~~~
main.cpp:3:20: note: place parentheses around the '&&' expression to silence this warning
    return a || !b && c;
                   ^
                (      )
1 error generated.
